services/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deploy

spec:
  replicas: 2
  selector:
    matchLabels:
      tier: backend
  template:
    metadata:
      labels:
        editor: vscode
        tier: backend
    spec:
      containers:
        - name: nginx
          image: nginx:alpine
