services/service.yml
kind: Service
apiVersion: v1
metadata:
  name: web-service
spec:
  selector:
    app: backend
  type: ClusterIP
  ports:
    - name: server
      port: 8081
      targetPort: 8080
